<resources>
    <string name="app_name">Quaestio</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_solo_game">SoloGame</string>
    <string name="difficulty">Difficulty</string>
    <string name="score">Score</string>
    <string name="question">Question</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>
    <string name="btnNewSolo">New Solo Game</string>
    <string name="logoDescriptor">Quaestio Logo</string>
</resources>
