<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/quaestio_bg"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.mikael.quaestio.SoloGame"
    tools:showIn="@layout/activity_solo_game">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/question"
        android:id="@+id/lblQuestion"
        android:layout_marginTop="99dp"
        android:textColor="#fbfafa"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer1"
        android:id="@+id/btnAnswer1"
        android:layout_marginTop="87dp"
        android:layout_below="@+id/lblQuestion"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Answer 2"
        android:id="@+id/btnAnswer2"
        android:layout_below="@+id/btnAnswer1"
        android:layout_alignLeft="@+id/btnAnswer1"
        android:layout_alignStart="@+id/btnAnswer1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Answer 3"
        android:id="@+id/btnAnswer3"
        android:layout_below="@+id/btnAnswer2"
        android:layout_alignLeft="@+id/btnAnswer2"
        android:layout_alignStart="@+id/btnAnswer2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/answer4"
        android:id="@+id/btnAnswer4"
        android:layout_below="@+id/btnAnswer3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Score:"
        android:id="@+id/lblScore"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/lblDifficulty"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblDifficultyOutput"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/difficulty"
        android:textColor="#7f7e7e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:id="@+id/lblScoreOutput"
        android:textColor="#878787"
        android:layout_alignTop="@+id/lblScore"
        android:layout_toRightOf="@+id/lblScore"
        android:layout_toLeftOf="@+id/btnAnswer1"
        android:layout_toStartOf="@+id/btnAnswer1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Difficulty:"
        android:id="@+id/lblDifficulty"
        android:textColor="#fefefe"
        android:layout_alignTop="@+id/lblDifficultyOutput"
        android:layout_toRightOf="@+id/btnAnswer1"
        android:layout_toEndOf="@+id/btnAnswer1" />
</RelativeLayout>
